test/spec_vectors/simd_splat/fail/module_24.wat
(module (func $f32x4.splat-arg-empty (result v128) (f32x4.splat)))